--- a/inst/NSmndRapp.Rnw
+++ b/inst/NSmndRapp.Rnw
@@ -44,6 +44,9 @@ if (!exists('HovedSkjema')){
       Satisfact <- rapbase::LoadRegData(registryName, qTilf, dbType)
       }
 
+#Bare gyldige kontrollskjema:
+Kontroll <- Kontroll[Kontroll$NoControl=='False', ]
+
 #RegData <- NSRegDataSQL(datoFra=datoFra, datoTil=datoTil)
 HovedSkjema <- NSPreprosesser(RegData=HovedSkjema[which(HovedSkjema$AdmitDt > as.POSIXlt('2011-01-01')), ])
 HovedSkjema$ShNavn <- factor(HovedSkjema$ShNavn)
@@ -154,7 +157,8 @@ xtable::xtable(t(AndelOppf), digits=1, align=c('l', rep('r', nrow(AndelOppf))),
 
 
 
-\begin{frame}[fragile] {Ikke vise i endelig versjon} #[exclude]
+\begin{frame}[fragile] {Kontrollskjema er nå filtrert på NoControll=FALSE}
+Ikke vise i endelig versjon} #[exclude]
 <<'AndelKtrMOppfolg', results='asis'>>=
 #Tabell: Andel kontrollskjema med oppfølging
 RaaTabKtr <- data.frame(Sykehus = Kontroll$HealthUnitShortName,
@@ -185,7 +189,7 @@ xtable::xtable(AndelOppfKtr, digits=1, align=c('l', rep('r', ncol(AndelOppfKtr))
 \end{frame}
 
 
-\begin{frame}[fragile]{Tas ut til koblingsnøkkel for kontrollskjema er riktig.}
+\begin{frame}[fragile]{Tas ut til koblingsnøkkel for kontrollskjema er riktig. Har filtrert kontrollskjema på NoControl=FALSE}
 
 
 <<'AndelUOppf', results='asis'>>=
