Rettet følgefeil av formatendring i ANeuNoMeasure og FNeuNoMeasure

--- a/inst/NSmndRapp.Rnw
+++ b/inst/NSmndRapp.Rnw
@@ -21,7 +21,7 @@ library(nordicscir)
 library(knitr)
 library(tools)
 datoTil <- Sys.Date()
-dato <- as.POSIXlt(datoTil)
+dato <- as.POSIXlt(datoTil, tz='UTC')
 datoFra <- as.Date(paste0(1900+dato$year-1,'-', dato$mon+1, '-', '01'))
 aarFra <- paste0(1900+dato$year-5, '-01-01')
       
@@ -57,11 +57,11 @@ if (!exists('HovedSkjema')){
 Kontroll <- Kontroll[Kontroll$NoControl=='False', ] # & Kontroll$CNum==1, ]
 
 #RegData <- NSRegDataSQL(datoFra=datoFra, datoTil=datoTil)
-HovedSkjema <- NSPreprosesser(RegData=HovedSkjema[which(HovedSkjema$AdmitDt > as.POSIXlt('2011-01-01')), ])
+HovedSkjema <- NSPreprosesser(RegData=HovedSkjema[which(HovedSkjema$AdmitDt > as.Date('2011-01-01')), ])
 HovedSkjema$ShNavn <- factor(HovedSkjema$ShNavn)
 HovedSkjema$SkjemaGUID <- toupper(HovedSkjema$SkjemaGUID)
-HovedSkjema5aar <- HovedSkjema[which(HovedSkjema$InnDato > as.POSIXlt(aarFra)), ]
-HovedSkjema12mnd <- HovedSkjema[which(HovedSkjema$InnDato > as.POSIXlt(datoFra)), ]
+HovedSkjema5aar <- HovedSkjema[which(HovedSkjema$InnDato > as.Date(aarFra)), ]
+HovedSkjema12mnd <- HovedSkjema[which(HovedSkjema$InnDato > as.Date(datoFra)), ]
 HovedSkjema$Aar <- factor(HovedSkjema$Aar, levels = 2011:(1900+dato$year))
 HovedSkjema5aar$Aar <- factor(HovedSkjema5aar$Aar, levels = (1900+dato$year-4):(1900+dato$year))
 
@@ -307,10 +307,10 @@ NevrKlass <- rbind(
 'Utført og klassifiserbar, utreise: ' = 
       addmargins(table(HovedSkjema12mnd$ShNavn[HovedSkjema12mnd$FAis %in% 1:5])), 
 'Ikke utført  ved innkomst:' = 
-      addmargins(table(HovedSkjema12mnd$ShNavn[HovedSkjema12mnd$ANeuNoMeasure == TRUE 
+      addmargins(table(HovedSkjema12mnd$ShNavn[HovedSkjema12mnd$ANeuNoMeasure == -1 
                                                & HovedSkjema12mnd$AAis == -1])),
 'Ikke utført ved utreise:' =
-      addmargins(table(HovedSkjema12mnd$ShNavn[HovedSkjema12mnd$FNeuNoMeasure == TRUE 
+      addmargins(table(HovedSkjema12mnd$ShNavn[HovedSkjema12mnd$FNeuNoMeasure == -1 
                                           & HovedSkjema12mnd$FAis == -1])),
 'Utført, men ikke klassifiserbar, innkomst: ' = 
       addmargins(table(HovedSkjema12mnd$ShNavn[HovedSkjema12mnd$AAis==9])),
@@ -342,9 +342,9 @@ NevrKlass28 <- rbind(
 'Utført og klassifiserbar, utreise: ' = 
       addmargins(table(HovedSkjema28$ShNavn[HovedSkjema28$FAis %in% 1:5])), 
 'Ikke utført ved innkomst:' = 
-      addmargins(table(HovedSkjema28$ShNavn[HovedSkjema28$ANeuNoMeasure == TRUE & HovedSkjema28$AAis == -1])),
+      addmargins(table(HovedSkjema28$ShNavn[HovedSkjema28$ANeuNoMeasure == -1 & HovedSkjema28$AAis == -1])),
 'Ikke utført ved utreise:' =
-      addmargins(table(HovedSkjema28$ShNavn[HovedSkjema28$FNeuNoMeasure == TRUE & HovedSkjema28$FAis == -1])),
+      addmargins(table(HovedSkjema28$ShNavn[HovedSkjema28$FNeuNoMeasure == -1 & HovedSkjema28$FAis == -1])),
 'Utført, men ikke klassifiserbar, innkomst: ' = 
       addmargins(table(HovedSkjema28$ShNavn[HovedSkjema28$AAis==9])),
 'Utført, men ikke klassifiserbar, utreise: ' = 
